[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/game/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/SpriteSheet.sprites/aircraft_explode_1.tres" type="Texture" id=2]
[ext_resource path="res://assets/images/SpriteSheet.sprites/aircraft_1.tres" type="Texture" id=3]
[ext_resource path="res://assets/images/SpriteSheet.sprites/aircraft_explode_4.tres" type="Texture" id=4]
[ext_resource path="res://assets/images/SpriteSheet.sprites/aircraft_explode_3.tres" type="Texture" id=5]
[ext_resource path="res://assets/images/SpriteSheet.sprites/aircraft_explode_2.tres" type="Texture" id=6]
[ext_resource path="res://assets/images/SpriteSheet.sprites/aircraft_2.tres" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), null ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[node name="Player" type="Area2D" groups=["player"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -60, 14, -20, 48, 16, 48, 24, -48, 24, -48, 16, -14, -20 )

[node name="Muzzle1" type="Position2D" parent="."]
position = Vector2( 0, -70 )

[node name="Muzzle2" type="Position2D" parent="."]
position = Vector2( -32, -25 )

[node name="Muzzle3" type="Position2D" parent="."]
position = Vector2( 32, -25 )

[node name="ShootTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="input_event" from="." to="." method="_on_Player_input_event"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
